; ModuleID = '/home/carl/AnghaBench/vlc/modules/packetizer/extr_hevc.c_SetsToAnnexB.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/packetizer/extr_hevc.c_SetsToAnnexB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@HEVC_VPS_ID_MAX = common dso_local global i32 0, align 4
@HEVC_SPS_ID_MAX = common dso_local global i32 0, align 4
@HEVC_PPS_ID_MAX = common dso_local global i32 0, align 4
@INT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32*, i32*, i32**, i32*)* @SetsToAnnexB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetsToAnnexB(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3, i32** %4, i32* %5) #0 {
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32** %4, i32*** %11, align 8
  store i32* %5, i32** %12, align 8
  store i32* null, i32** %13, align 8
  store i64 0, i64* %14, align 8
  %15 = load i32, i32* @HEVC_VPS_ID_MAX, align 4
  %16 = load i32*, i32** %10, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @APPENDIF(i32 %15, i32* %16, i32 %19, i32 1)
  %21 = load i32, i32* @HEVC_VPS_ID_MAX, align 4
  %22 = load i32*, i32** %10, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @APPENDIF(i32 %21, i32* %22, i32 %25, i32 0)
  %27 = load i32, i32* @HEVC_SPS_ID_MAX, align 4
  %28 = load i32*, i32** %9, align 8
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @APPENDIF(i32 %27, i32* %28, i32 %31, i32 1)
  %33 = load i32, i32* @HEVC_SPS_ID_MAX, align 4
  %34 = load i32*, i32** %9, align 8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @APPENDIF(i32 %33, i32* %34, i32 %37, i32 0)
  %39 = load i32, i32* @HEVC_PPS_ID_MAX, align 4
  %40 = load i32*, i32** %8, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @APPENDIF(i32 %39, i32* %40, i32 %43, i32 1)
  %45 = load i32, i32* @HEVC_PPS_ID_MAX, align 4
  %46 = load i32*, i32** %8, align 8
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @APPENDIF(i32 %45, i32* %46, i32 %49, i32 0)
  %51 = load i64, i64* %14, align 8
  %52 = load i64, i64* @INT_MAX, align 8
  %53 = icmp ule i64 %51, %52
  br i1 %53, label %54, label %60

54:                                               ; preds = %6
  %55 = load i32*, i32** %13, align 8
  %56 = load i32**, i32*** %11, align 8
  store i32* %55, i32** %56, align 8
  %57 = load i64, i64* %14, align 8
  %58 = trunc i64 %57 to i32
  %59 = load i32*, i32** %12, align 8
  store i32 %58, i32* %59, align 4
  br label %63

60:                                               ; preds = %6
  %61 = load i32*, i32** %13, align 8
  %62 = call i32 @free(i32* %61)
  br label %63

63:                                               ; preds = %60, %54
  ret void
}

declare dso_local i32 @APPENDIF(i32, i32*, i32, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
